created base functionality for getting threads and replies from a specified channel, currently only returns a hardcoded array of threads and replies
